# audio-fft-midi-converter

./: AGENTS.md  LICENSE  README.md  audio_loader.py  audio_to_midi.py  channel_mapper.py  channel_mapper_backup.py  check_missing_peaks.py  debug_assignment.py  fft_analyzer.py  fix_fft.py  fix_fft2.py  fix_fft3.py  fix_fft4.py  midi_generator.py  midi_writer.py  pyproject.toml  reference_midi.mid  requirements.txt  session-ses_2ec5.md  session-ses_30f7.md  session-ses_3104.md  test_better_detection.py  test_conversion.py  test_formant_detection.py
