[project]
name = "audio-to-midi"
version = "0.1.0"
description = "Convert audio files to MIDI format using Constant-Q Transform analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "mido>=1.3.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.scripts]
audio-to-midi = "audio_to_midi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
